# client-server-application

./: CMakeLists.txt  README.md  build.sh  data.txt
configs/: client_config.conf  server_config.conf
src/client/: CMakeLists.txt  client.cc  client.h  data.txt  main.cc
src/common/: file.cc  file.h  logger.h  settings.h
src/server/: CMakeLists.txt  main.cc  queue.h  server.cc  server.h
